[gd_scene load_steps=5 format=3 uid="uid://bvb35n80s7iiu"]

[ext_resource type="FontFile" uid="uid://b1rs3eryvjadx" path="res://fonts/p22nudgewinkpro-regular.ttf" id="1_fcq1t"]
[ext_resource type="Script" path="res://ui/overlays/game_over_overlay.gd" id="2_jowc5"]
[ext_resource type="Texture2D" uid="uid://jr6ajkqgshkm" path="res://art/ui/PS_caixa_texto.png" id="4_dibeh"]

[sub_resource type="Theme" id="Theme_a2rd4"]
default_font = ExtResource("1_fcq1t")

[node name="GameOverOverlay" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_a2rd4")
script = ExtResource("2_jowc5")

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(420, 0)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer3"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 50
text = "game_over"
horizontal_alignment = 1

[node name="MenuContaine_GO" type="VBoxContainer" parent="VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="RestartButton_GO" type="Button" parent="VBoxContainer3/MenuContaine_GO"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.235294, 0.235294, 0.235294, 1)
theme_override_colors/font_pressed_color = Color(0.235294, 0.235294, 0.235294, 1)
theme_override_colors/font_focus_color = Color(0.235294, 0.235294, 0.235294, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/icon_max_width = 350
theme_override_font_sizes/font_size = 30
text = "restart_game"
icon = ExtResource("4_dibeh")
flat = true
icon_alignment = 1

[node name="ExitButton_GO" type="Button" parent="VBoxContainer3/MenuContaine_GO"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.235294, 0.235294, 0.235294, 1)
theme_override_colors/font_pressed_color = Color(0.235294, 0.235294, 0.235294, 1)
theme_override_colors/font_focus_color = Color(0.235294, 0.235294, 0.235294, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/icon_max_width = 350
theme_override_font_sizes/font_size = 30
text = "leave_game"
icon = ExtResource("4_dibeh")
flat = true
icon_alignment = 1

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="button_down" from="VBoxContainer3/MenuContaine_GO/RestartButton_GO" to="." method="_on_restart_button_go_button_down"]
